Radio Tray 0.5.x - 11/04/2010
=============================

Radio Tray 0.5.1 - 11/04/2010
=============================

* Added contributed translation language files
* Improved gui feedback
* Several small fixes

Radio Tray 0.5 - 20/03/2010
===========================

* Fixed radiotray startup bugs, by reorganizing application structure
* Added translation support 

Radio Tray 0.4 - 16/02/2010
===========================

* Added radio sort operation
* Enhanced tooltip, now shows song information
* Improved playlist support


Radio Tray 0.3 - 30/01/2010
===========================

* Fixed support for apostrophes in radio names
* Fixed scrollbar issue
* Added support for M3U playlist format
* Added support for ASX,WAX and WVX playlist formats


Radio Tray 0.2 - 17/01/2010
===========================

* Added support for shoutcast/icecast playlists
* Added desktop entry file


Radio Tray 0.1 - 09/01/2010
===========================

* Initial release